--- a/src/ui/components/my-reddit-app/template.hbs
+++ b/src/ui/components/my-reddit-app/template.hbs
@@ -1,3 +1,9 @@
 <div>
-  <h1>Welcome to Glimmer!</h1>
+  <h1>{{title}}</h1>
+  <reddit-list
+    @titles={{titles}}
+    @delete={{action delete}}
+    @add={{action add}}
+    @onKeyUp={{action onKeyUp}}
+  />
 </div>
